Update FoliaUtils.java